fixed a minor error inot showing issue

--- a/frontend/src/components/Events/Events.css
+++ b/frontend/src/components/Events/Events.css
@@ -322,3 +322,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.error {
+    color: red;
+}
